# wine-aggregator-python

./: .gitignore  README.md  lefthook.yml  poetry.toml  pyproject.toml  renovate.json
.github/workflows/: Build.yml  python-app.yml
Python Starter/: .coveragerc  .gitignore  Dockerfile  Jenkinsfile  README.md  helpers.py  poetry.toml  pyproject.toml  remoteCoverage.py  renovate.json  tenant.py  wait-for
Python Starter/testutils/: mockServer.py  mockTenant.py
Python Starter/testutils/acceptance/: acceptance_config.py  dumpCoverage.py
app/: app.py  email_loader.py
tests/acceptance/features/: environment.py  example.feature
tests/acceptance/features/steps/: example.py
tests/unit/: Insider's Advantage.eml  test_email_loader.py
wine_aggregator/: app.py  logging.conf
