[tool.poetry]
name = "wine-aggregator"
version = "0.1.0"
description = ""
authors = ["Nick Rook <rooknj@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.2.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.5"

[tool.poetry.group.test.dependencies]
# Needed by FastAPI TestClient
#requests = "^2.30.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
#pytest-asyncio = "^0.21.0"
#wiremock = "^2.6.0"
behave = "^1.2.6"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "Python Starter",
]

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"

