[tool.poetry]
name = "wine-aggregator"
version = "0.1.0"
description = ""
authors = ["Nick Rook <rooknj@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.2.7"
pandas = "^2.1.3"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.2.0"
pandas-stubs = "^2.1.1.230928"
types-beautifulsoup4 = "^4.12.0.7"

[tool.poetry.group.test.dependencies]
# Needed by FastAPI TestClient
#requests = "^2.30.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
#pytest-asyncio = "^0.21.0"
#wiremock = "^2.6.0"
behave = "^1.2.6"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "Python Starter",
]

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"

