[tool.poetry]
name = "qbaa-genai-plugin"
version = "0.1.0"
description = ""
authors = ["Maintainers <rafael_pinerosrhon@intuit.com>"]

[tool.poetry.dependencies]
python = "^3.11"
cffi= {version="1.15.1", python = ">3.7.1,<3.11"}
data-mlplatform-genosstarterkit-runtime ={version = "^4.0.0", python = ">=3.11,<4.0"}
langchain = {version = "0.0.304", python = ">=3.8.1,<4.0"}
urllib3 = "1.26.16"
numpy = {version = "1.22.4", python = ">=3.7,4.0"}
httpx-sse = "^0.3.0"
nocode-execution-genstudiopy-genstudiopy = {version = "^1.0.0", python = ">=3.8.1,<4.0"}
botocore = "^1.29.142"
idps-sdk = "^3.9918.0"
openai = {version = "^0.27.7", python = ">=3.7.1,<4.0"}
hypercorn = {version = ">=0.14.0,<0.15.0", extras = ["uvloop"]}
fastapi = {extras = ["uvicorn"], version = "^0.101.0"}
cryptography = "^41.0.0"
pydantic = ">=1.8.2,<2"
prometheus-fastapi-instrumentator = ">=6,<7"
pyjwt = ">=2.3.0,<3"
beautifulsoup4 = "^4.12.0"
pandas = ">1.0.4,<2.0.0"
coverage = "^7.2.7"
uvicorn = "^0.21.1"
pandasai = "^1.0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
# Needed by FastAPI TestClient
requests = "^2.30.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.0"
wiremock = "^2.6.0"

[[tool.poetry.source]]
name = "artifactory.intuit"
url = "https://artifact.intuit.com/artifactory/api/pypi/pypi-intuit/simple/"
default = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = ["integration: mark a test as a integration test."]
pythonpath = "app"

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
